<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CS TA Queue</string>
    <string name="status_active">Active</string>
    <string name="status_frozen">Frozen</string>
    <string name="status_inactive">Inactive</string>
    <string name="password_prompt">Password:</string>
    <string name="status_connecting">Connecting...</string>
    <string name="student_name">Name:</string>
    <string name="machine_name">Machine:</string>
    <string name="bad_password">Bad Section/Password</string>
    <string name="error_connecting">Connection Error</string>
    <string name="section">Section:</string>
    <string name="login_header">CS TA Queue login</string>
    <string name="login_button_txt">Connect</string>
    <string name="save_login">Save Login</string>
    <string name="conn_loss">Connection to queue lost!</string>
</resources>
