<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        />
    <TextView 
        android:id="@+id/sectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/loginHeader"
        />
    <EditText
        android:id="@+id/sectionInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sectionLabel"
        android:maxLines="1"
        />
    <TextView 
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_prompt"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sectionInput"
        />
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:password="true"
        android:maxLines="1"
        />
    <CheckBox
        android:id="@+id/saveCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/passwordInput"
        android:text="@string/save_login"
        />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_txt"
        android:layout_below="@id/passwordInput"
        android:layout_alignParentRight="true"
        android:onClick="onConnectClick"
        />
    <ListView  
        android:id="@android:id/list"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/sectionInput"
    />
</RelativeLayout>

